# fastapi-template

./: README.md  pyproject.toml
app/: app.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 1900529510ad_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
